chore: ported to 1.21.4
Compiles and starts up but:
* Drawing code is not working correcly
* URLImageIcon is currently non-functional (vanilla HTTPTexture is gone)